# apple-health-landing-zone

./: .gitignore  .mcp.json  README.md  app.py  create_test_db.py  mcp_server.py  pyproject.toml  requirements.txt
data/: export.xml
src/parser/: parser.py
