[project]
name = "apple-health-landing-zone"
version = "0.1.0"
description = "Apple Health export.xml landing zone with MCP server creation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.34.0",
    "huggingface-hub>=0.33.0",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.33.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
